# restaurant-journal

./: .gitignore  README.md  app.py  controller.py  pyproject.toml  requirements.txt
.chalice/: config.json  policy.json
.chalice/deployed/: dev.json
src/: controller.py
