[tool.poetry]
name = "restaurant-journal"
version = "0.1.0"
description = ""
authors = ["Andrew Chiang"]

[tool.poetry.dependencies]
python = "^3.8"
chalice = "*"
requests = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

